[maven-release-plugin] prepare release bit-world-1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <scm>
         <connection>scm:git:ssh://git@github.com:soccermafia89/Bit-World.git</connection>
         <developerConnection>scm:git:ssh://git@github.com:soccermafia89/Bit-World.git</developerConnection>
-        <url>https://github.com/soccermafia89/Bit-World</url>
+        <url>git@github.com:soccermafia89/Bit-World.git</url>
         <tag>bit-world-1.0.0</tag>
     </scm>
 
