--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>ethier.alex</groupId>
     <artifactId>bit-world</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>Bit World</name>
     
     <scm>
